@@ -37,7 +37,7 @@
 # that is actually run.
 # -----------------------------------------------------------------------------
 
-AC_INIT([JCCL], [0.12], [vrjuggler-devel@lists.sourceforge.net])
+AC_INIT([JCCL], [0.13], [vrjuggler-devel@lists.sourceforge.net])
 AC_CONFIG_HEADERS([common/jccl/jcclDefines.h])
 AC_PREREQ([2.53])
 AC_COPYRIGHT([VR Juggler is (C) Copyright 1998-2003 by Iowa State University])
